--- a/public/Index.html
+++ b/public/Index.html
@@ -5,6 +5,7 @@
   <meta name='viewport' content="width=device-width, initial-scale=1">
   <title>expensify-app</title>
   <link rel="stylesheet" type= "text/css" href="/dist/styles.css"/>
+  <link rel="shortcut icon"  href='./images/favicon.ico'/>
 </head>
 <body>
     <div id="app"></div>
